--- a/Apr/28th/28일_정리.md
+++ b/Apr/28th/28일_정리.md
@@ -38,7 +38,17 @@
         > 현재의 __상태__ 에서 모델이 어떤 __행동__ 을 취하는지에 대해 최적의 결과 값을 내는 것이 주 목표. 여기서 보상은 어떤 행동이 맞고 틀리고를 알려준다고 생각하면 된다. 
         >> 즉, 옳은 행동을 하거나 득이 되는 결과를 도출 했을 경우에는 보상이 주어짐으로써 맞다는 판단을 옳게 만들고 옳지 않거나 득이 되지 않는 결과를 냈을때는 보상이 없기에 잘못 되었음을 인지하게 되는 방식을 얘기한다.
 
-- Deep Learning
-    - 딥러닝은 뇌의 구조와도 같아 전달이 많아질수록 세포수가 늘어남을 모방하여 만들어진 구조이다. 입력이 곳, 자극이 되며 이 자극으로 세포의 결정으로 다음 세포에게 전기적 신호를 전달. 게속 자극과 시도 전달로 이루어짐. 
+## Deep Learning
+- 딥러닝은 뇌의 구조와도 같아 전달이 많아질수록 세포수가 늘어남을 모방하여 만들어진 구조이다. 입력이 곳, 자극이 되며 이 자극으로 세포의 결정으로 다음 세포에게 전기적 신호를 전달. 게속 자극과 시도 전달로 이루어짐. 
     - 모델에서는 Visible Layer, Hidden Layer, Output Layer와 같이 나뉘어 Visible Layer에서 입력을 받고 Hidden Layer을 통과하여 Output Layer로 결과를 뱉어낸다. 
     ![Deep Learning figure 1](./img/deep_learning_fig1.png)
+
+    - 퍼셉트론 
+    - Activation Function (활성함수)
+        - Sigmoid Function (시그모이드 함수)
+        - Step Function (단위 계단 함수)
+        - Relu
+    - Cost Function
+        - MSE & RMSE
+        
+        - 경사하강법
