--- a/Apr/28th/28일_정리.md
+++ b/Apr/28th/28일_정리.md
@@ -45,9 +45,25 @@
 
     - 퍼셉트론 
     - Activation Function (활성함수)
-        - Sigmoid Function (시그모이드 함수)
         - Step Function (단위 계단 함수)
+            - Binaural 하게 0과 1로 나뉘어서 극단적으로 값을 전해준다고 생각하면 된다. 모델이 확률적인 계산을 할 때 확실한 연산과정과 프로세싱을 사용된다. 
+            - 문제는 너무 극단적으로 가다보니 실제 값과 Step Function을 통해 나온 값이 확연히 다를 수 있다는 것 이다. 비유를 통해 말하면 컵 2개로 야바위를 하던 도중 매번 잘 나오다가 한번 틀리면 계속 틀리게 되는 것 이다.
+            ![Step function](./img/step_f_fig.jpg)
+
+        - Sigmoid Function (시그모이드 함수)
+            - $h(x) = \frac{1}{1 + exp(x)} $
+            - 여기서 $ exp(x)$ 는 $ e^x $ 와 동일하다.
+            - Step Function의 극단적인 야바위 문제를 해결하고자 나온 것이 바로 Sigmoid 함수이다. 어찌보면 가우스가 생각날 수도 있다. 
+            ![Sigmoid function figure](./img/sigmoid_f_fig.png)
+            - 기존에 야바위로 섞던걸 이제는 돌려돌려 돌림판으로 정하는 것이다. 즉, 어떤 입력값 (x축)이 들어오면 이를 좀 더 자세히 표현 (y축) 할 수 있게 된다.
+            - Sigmoid도 단점이 존재하는데 이전 값을 받아 수행하게 되면 대다수의 값들이 0으로 수렴하게 된다는 문제 즉, Gradient Vashing이 발생하게 된다. 물론 해결을 하기 위해서 여러개의 Hidden Layer를 활용하면 되지만 시간이 너무 오래 걸린다.
         - Relu
+            - 하도 많은 사람들이 모델이랑 도박을 하다보니 똑똑이들이 이제는 이것만 쓰면 걱정하지말라며 만들어준 것이 ReLu 함수이다.
+            - Rectified Linear Unit 의 약자로 정류한 선형 유닛으로 시그모이드의 0에 수렴하는 문제를 해결하고자 나온 것이다. 0에 가깝거나 혹은 음수가 나오면 그냥 0으로 넣어버리고, 0보다 크면 그 값 그대로 넣어주는 것이다. 또한 시그모이드에 비해 학습 속도가 굉장히 빨라지고 확률분포의 정확도도 높아졌다고 한다.
+            ![ReLu Function Figure](./img/relu_f_fig.png)
+                - *추가조사*
+                > 사실 ReLu도 문제가 있는데 음수가 나오면 0으로 버리다 보니 Weight (가중치)가 업데이트가 되지 않는 현상이 생기게 된다. 이를 막고자 Leaky ReLu, Parametric ReLu, ELU, GELu 등 굉장히 다양하게 있다.
+            
     - Cost Function
         - MSE & RMSE
         
