--- a/Apr/28th/28일_정리.md
+++ b/Apr/28th/28일_정리.md
@@ -65,6 +65,14 @@
                 > 사실 ReLu도 문제가 있는데 음수가 나오면 0으로 버리다 보니 Weight (가중치)가 업데이트가 되지 않는 현상이 생기게 된다. 이를 막고자 Leaky ReLu, Parametric ReLu, ELU, GELu 등 굉장히 다양하게 있다.
             
     - Cost Function
+        - *추가조사*
+            - Cost Function은 비용함수는 원본 값과 가장 작은 오차 가설함수를 도출하기 위함으로 결과 값과 원본 값을 근접하게 만들기 위한 함수이다.
         - MSE & RMSE
-        
+            - MSE
+                - $\frac{1}{n} \sum_{i=1}^{n} (\hat{Y}-Y_i)^2 $
+                - Math Squared Error 라는 뜻으로 평균제곱오차 라고도 불린다. 원본 값에서 예측 값을 빼고 제곱을 하고 이를 평균적으로 구하게 되는 공식이다. 제곱을 하는 이유는 여러 이유가 있지만 음수가 나온 값을 양수로 바꿔주기 위함이다. 그러나 제곱을 하다보니 실제 값과 멀어지는 현상이 발견 된다. 이를 조금이나마 줄이고자 한 것이 바로 RMSE 이다.
+            - RMSE
+                - $\sqrt{\frac{1}{n} \sum_{i=1}^{n} (\hat{Y}-Y_i)^2} $
+                - R은 Root로 Root Math Squared Error, 즉 제곱근이 더해진 평균제곱오차 라고 생각하면 된다.
         - 경사하강법
+            - 앞써 구한 공식들이 모두 제곱이 들어가면서 1차 함수 였던 공식이 2차 함수가 되어 버려 다른 형태의 그래프가 나타나게 되었다. 그래서 최저값 $ y = 0 $ 되는 부분을 찾는 것이 다시 주 목표가 되었다.
