경사하강법 까지 완료

--- a/Apr/28th/28일_정리.md
+++ b/Apr/28th/28일_정리.md
@@ -76,3 +76,4 @@
                 - R은 Root로 Root Math Squared Error, 즉 제곱근이 더해진 평균제곱오차 라고 생각하면 된다.
         - 경사하강법
             - 앞써 구한 공식들이 모두 제곱이 들어가면서 1차 함수 였던 공식이 2차 함수가 되어 버려 다른 형태의 그래프가 나타나게 되었다. 그래서 최저값 $ y = 0 $ 되는 부분을 찾는 것이 다시 주 목표가 되었다.
+            ![Gradient Descent Figure Image](./img/gradient_descent_f_fig.png)
